2004-02-28  Olivier Chapuis  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmSafeCreateImage):
	Fixed some safety tests

2004-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__handle_cr_on_client):
	fixed a bug in the Jave configure request workaround

2004-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (__cr_detect_icccm_move):
	improved motion method detection for fullscreen requests

2004-02-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (AddWindow):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/builtins.c (CMD_BugOpts):
	new BugOpts option DisplayNewWindowNames intended for debugging

2004-02-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Bindings.c (FvwmStringToKeysym):
	small performance enhancement

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(__move_loop):
	fixed the FlickeringMoveWorkaround option which did nothing before

2004-02-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/fvwm.h:
	* fvwm/style.h (SIS_UNMANAGED):
	* fvwm/add_window.c (AddWindow):
	New style Unmanaged

	* fvwm/expand.c (expand_vars_extended):
	new variables $[w.iconfile] and $[w.miniiconfile]

	* libs/Graphics.c (do_relieve_rectangle_with_rotation):
	made left side of a relief one pixel longer at the bottom

2004-02-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/defaults.h (DEF_FP_SORT_WINDOWLIST_BY):
	* fvwm/style.c (style_set_old_focus_policy):
	fixed default window list ordering with ClickToFocus

2004-02-04  Marcus Lundblad  <ml@update.uu.se>

	* fvwm/libs/Flocale.h:
	* fvwm/libs/Flocale.c (FlocaleStringNumberOfBytes)
	(FlocaleStringByteToCharOffset)
	(FlocaleStringCharToByteOffset)
	(FlocaleStringCharLength):
	Made utility functions available outside of Flocale

2004-01-31  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/events.c (__test_for_motion):
	Fixed a lockup, see the long comment in the code

2004-01-26  Dominik Vogt  <dominik.vogt@gmx.de>
