@@ -1,3 +1,11 @@
+2004-03-02  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/functions.c (execute_function_override_window):
+	* fvwm/module_interface.c (ExecuteModuleCommand):
+	* fvwm/conditional.c (circulate_cmd):
+	sometimes, DeferExecution was called although a window was already
+	selected, for example with the "Current" commend; fixed
+
 2004-02-28  Olivier Chapuis  <olivier.chapuis@free.fr>
 
 	* libs/FImage.c (FShmSafeCreateImage):
